--- a/app/site/css/styles.css
+++ b/app/site/css/styles.css
@@ -12,13 +12,15 @@
 }
 
 .container-fluid {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   background-color: #9EB9B9;
   padding: 0 !important;
 }
 
 .container-fluid #base {
   width: 100%;
+  min-height: 100vh;
   height: 100%;
   display: -ms-flexbox;
   display: flex;
@@ -51,12 +53,31 @@
   font-style: italic;
 }
 
-.container-fluid #base .container p {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
+.container-fluid #base .container div {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: start;
+      justify-content: flex-start;
+}
+
+.container-fluid #base .container div p {
   margin-top: 20px;
   margin-left: 10%;
   font-size: 22px;
+}
+
+.container-fluid #base .container div a {
+  width: 50px;
+  margin-top: 20px;
+  margin-left: 10px;
+  padding: 5px 0 0 0;
+  height: 30px;
+  text-align: center;
+}
+
+.container-fluid #base .container div a p {
+  margin: 0;
+  font-size: 12px;
 }
 
 .container-fluid #base .container .button {
